# crawler_scraper

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  QUICKSTART.md  README.md  flake8_report.txt  orchestrator.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_background.ps1  run_background_stop.ps1  setup.py  worker.py
.github/workflows/: python-tests.yml
app/: ai_doc_agent.py  change_detector.py  config.py  controller.py  crawler.py  engine.py  google_workspace.py  governance.py  ingest.py  main.py  models.py  normalize.py  normalizer.py  scraper.py  sync_orchestrator.py  worker.py
config/: example_config.yaml
crawler/: engine.py  run.py
crawler/seeds/: business_loans.yaml
examples/: basic_crawl.py  basic_scrape.py  complete_example.py  modular_pipeline.py
integrations/: credential_agent.py
src/crawler_scrapper/: __init__.py
src/crawler_scrapper/core/: __init__.py  base_module.py  crawler.py  module_manager.py  scraper.py
src/crawler_scrapper/integrations/: __init__.py  auto_builder.py  foundation.py  gateway.py  taxonomy.py
src/crawler_scrapper/modules/: __init__.py  data_transformer.py  data_validator.py  rate_limiter.py
src/crawler_scrapper/utils/: __init__.py  config_loader.py  url_utils.py
tests/: __init__.py  smoke_run.ps1  test_ai_doc_agent.py  test_change_detector.py  test_google_workspace.py  test_governance.py  test_module_manager.py  test_run.py  test_scraper.py  test_sync_orchestrator.py
vision_cortex/agents/: headless_crawler.py
vision_cortex/integration/: headless_team.py
